<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Got it</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server">Server IP or Hostname</string>
    <string name="localhost">https://10.0.2.2:8443</string>
    <string name="title_activity_video_list">Video list</string>
    <string name="videoName">Name:</string>
    <string name="videoUrl">Url:</string>
    <string name="addVideoMetaData">New video data</string>
    <string name="add">Add</string>
    <string name="title_activity_user_list">Who liked this video</string>
    <string name="userList">User list</string>
    <string name="videoDuration">Duration</string>
    <string name="default_duration">0</string>
    <string name="title_activity_add_meta_data">Test</string>
    <string name="title_activity_teen_list">Teens</string>
    <string name="nav_teens">Teens</string>
    <string name="nav_checkins">Check-Ins</string>
    <string name="nav_view_settings">Settings</string>
    <string name="nav_view_signout">Sign Out</string>
    <string name="save">Save</string>
    <string name="question_sugar_level">What was your blood sugar level at meal time?</string>
    <string name="question_what_eat_level">What did you eat at meal time?</string>
    <string name="question_administer_insulin">Did you administer insulin?</string>
    <string name="nav_feeds">Feed</string>
    <string name="nav_as_follower">Switch to follower</string>
    <string name="nav_as_teen">Switch to teen</string>
    <string name="nav_notifications">Notifications</string>
    <string name="notification_request">%s want to be your follower. Do you accept request?</string>
    <string name="notification_accept">%s accepted you request.</string>
    <string name="notification_reject">%s rejected you request.</string>
    <string name="requested">Requested</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="cancel_subscription">Cancel subscription</string>
    <string name="nav_followers">Followers</string>
    <string name="no_data_available">No data available</string>
    <string name="notification_canceled">Your subscription was canceled by %s.</string>
    <string name="can_remove_this_notification">Can\'t remove this notification. Please answer first.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_view_registration">Registration</string>
    <string name="pick_date">Pick date</string>
    <string name="last">Last</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="register_link_text"><u>Register</u></string>
    <string name="nav_feedback">Feedback</string>
    <string name="graph_title">Sugar blood level</string>
</resources>
