<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teens"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_teens" />
        <item
            android:id="@+id/nav_check_ins"
            android:icon="@drawable/ic_done_black_24dp"
            android:title="@string/nav_checkins" />
        <item
            android:id="@+id/nav_feeds"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/nav_feeds" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/nav_feedback" />
        <item
            android:id="@+id/nav_followers"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/nav_followers" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />
    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_view_settings" />
    <item
        android:id="@+id/nav_singout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/nav_view_signout" />

</menu>