<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AddMetaDataActivity" >

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/videoName"
            />

        <EditText
            android:id="@+id/videoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/urlLayout"
        android:layout_below="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/videoUrl"
            />

        <EditText
            android:id="@+id/videoUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:ems="10" />

    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/urlLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/add" />

</RelativeLayout>