<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.jzson.gotit.client.Utils"/>
        <variable
            name="feedback"
            type="com.jzson.gotit.client.model.Feedback" />
    </data>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sugar_level_question"
                        android:ems="10"
                        android:textSize="20sp"
                        android:text="@string/question_sugar_level"
                        android:layout_weight="1"
                        />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="5"
                        android:textSize="20sp"
                        android:id="@+id/sugar_level_answer"
                        android:layout_weight="1"
                        android:text="@{feedback.getAnswer(1)}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/what_eat_question"
                        android:ems="10"
                        android:textSize="20sp"
                        android:text="@string/question_what_eat_level"
                        android:layout_weight="1"
                        />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="5"
                        android:textSize="20sp"
                        android:text="@{feedback.getAnswer(1)}"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/administer_insulin_question"
                        android:ems="10"
                        android:textSize="20sp"
                        android:text="@string/question_administer_insulin"
                        android:layout_weight="1"
                        />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch1"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/save"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

</layout>